# rustcnc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USER_GUIDE.md
config/: default.toml  pi4.toml
crates/rustcnc-core/: Cargo.toml
crates/rustcnc-core/src/: config.rs  error.rs  gcode.rs  job.rs  lib.rs  machine.rs  overrides.rs  units.rs  ws_protocol.rs
crates/rustcnc-core/src/grbl/: error_codes.rs  mod.rs  protocol.rs  realtime.rs  settings.rs  status.rs
crates/rustcnc-planner/: Cargo.toml
crates/rustcnc-planner/src/: estimator.rs  file_loader.rs  lib.rs  planner.rs  validator.rs
crates/rustcnc-server/: Cargo.toml
crates/rustcnc-server/src/: app.rs  auth.rs  cli.rs  logging.rs  main.rs  shutdown.rs  state.rs  static_files.rs
crates/rustcnc-server/src/api/: auth.rs  connection.rs  files.rs  machine.rs  mod.rs  settings.rs  system.rs
crates/rustcnc-server/src/ws/: broadcaster.rs  codec.rs  handler.rs  mod.rs
crates/rustcnc-server/tests/: simulator.rs  streaming.rs  ws_protocol.rs
crates/rustcnc-simulator/: Cargo.toml
crates/rustcnc-simulator/src/: lib.rs  motion.rs  parser.rs  simulator.rs  state_machine.rs  virtual_serial.rs
crates/rustcnc-streamer/: Cargo.toml
crates/rustcnc-streamer/src/: buffer_tracker.rs  lib.rs  response_parser.rs  rt_config.rs  serial.rs  streamer.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.css  index.tsx
frontend/src/components/auth/: LoginOverlay.module.css  LoginOverlay.tsx
frontend/src/components/connection/: ConnectionPanel.module.css  ConnectionPanel.tsx  PortSelector.module.css  PortSelector.tsx
frontend/src/components/console/: Console.module.css  Console.tsx
frontend/src/components/controls/: ControlBar.module.css  ControlBar.tsx  EmergencyStop.module.css  EmergencyStop.tsx
frontend/src/components/dro/: AxisDisplay.module.css  AxisDisplay.tsx  DRO.module.css  DRO.tsx
frontend/src/components/file/: FileList.module.css  FileList.tsx  FileUpload.module.css  FileUpload.tsx  JobProgress.module.css  JobProgress.tsx
frontend/src/components/gcode/: GCodeViewer.module.css  GCodeViewer.tsx
frontend/src/components/jog/: JogPad.module.css  JogPad.tsx
frontend/src/components/layout/: Dashboard.module.css  Dashboard.tsx  LayoutSettings.module.css  LayoutSettings.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.module.css  StatusBar.tsx  Widget.module.css  Widget.tsx
frontend/src/components/macros/: MacroPanel.module.css  MacroPanel.tsx
frontend/src/components/overrides/: OverrideSlider.module.css  OverrideSlider.tsx  OverridesPanel.module.css  OverridesPanel.tsx
frontend/src/components/systeminfo/: SystemInfoPanel.module.css  SystemInfoPanel.tsx
frontend/src/components/viewer3d/: ToolpathViewer.module.css  ToolpathViewer.tsx  grid.ts  scene.ts  tool.ts  toolpath.ts
frontend/src/lib/: api.ts  auth.ts  format.ts  store.ts  types.ts  widgetStore.ts  ws.ts
packaging/: install.sh  uninstall.sh
packaging/systemd/: rustcnc.service
scripts/: build-frontend.sh  cross-pi.sh  deploy-pi.sh  install-pi.sh  package-pi.sh  run-pi.sh
tests/fixtures/: arcs.gcode  errors.gcode  simple.gcode  stress.gcode
