[workspace]
resolver = "2"
members = [
    "crates/rustcnc-core",
    "crates/rustcnc-streamer",
    "crates/rustcnc-planner",
    "crates/rustcnc-simulator",
    "crates/rustcnc-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Serial port
serialport = "4.7"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# CLI
clap = { version = "4.5", features = ["derive"] }
# Configuration
toml = "0.8"
# Embedding frontend
rust-embed = { version = "8.5", features = ["compression"] }
# CPU affinity and RT
core_affinity = "0.8"
libc = "0.2"
# Utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"
bytes = "1.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
mime_guess = "2.0"

# Internal crates
rustcnc-core = { path = "crates/rustcnc-core" }
rustcnc-streamer = { path = "crates/rustcnc-streamer" }
rustcnc-planner = { path = "crates/rustcnc-planner" }
rustcnc-simulator = { path = "crates/rustcnc-simulator" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.rustcnc-streamer]
opt-level = 3
codegen-units = 1
