[package]
name = "rustcnc-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
