[package]
name = "rustcnc-planner"
version.workspace = true
edition.workspace = true

[dependencies]
rustcnc-core = { workspace = true }
rustcnc-streamer = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
