[package]
name = "rustcnc-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustcnc"
path = "src/main.rs"

[dependencies]
rustcnc-core = { workspace = true }
rustcnc-streamer = { workspace = true }
rustcnc-planner = { workspace = true }
rustcnc-simulator = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
serialport = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
rust-embed = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
mime_guess = { workspace = true }
