[package]
name = "rustcnc-simulator"
version.workspace = true
edition.workspace = true

[dependencies]
rustcnc-core = { workspace = true }
rustcnc-streamer = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
